--- a/.github/workflows/java-war.yml
+++ b/.github/workflows/java-war.yml
@@ -26,5 +26,5 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('java/war/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - run: ./mvnw package
+      - run: ./mvnw -B package
         working-directory: java/war
