--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,6 +2,7 @@
 ca-certificates/ @paketo-buildpacks/java-buildpacks
 dotnet-core/     @paketo-buildpacks/dotnet-core-maintainers
 go/              @paketo-buildpacks/go-maintainers
+httpd/           @paketo-buildpacks/php-maintainers
 java/            @paketo-buildpacks/java-buildpacks
 nginx/           @paketo-buildpacks/php-maintainers
 nodejs/          @paketo-buildpacks/nodejs-maintainers
