--- a/.github/workflows/test-pull-request-nodejs.yml
+++ b/.github/workflows/test-pull-request-nodejs.yml
@@ -24,5 +24,4 @@ jobs:
       run: |
         ./scripts/smoke.sh --suite nodejs \
                            --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base \
-                           --builder paketobuildpacks/builder:tiny
+                           --builder paketobuildpacks/builder:base
