--- a/.github/workflows/test-pull-request-php.yml
+++ b/.github/workflows/test-pull-request-php.yml
@@ -23,6 +23,4 @@ jobs:
     - name: Test PHP Samples
       run: |
         ./scripts/smoke.sh --suite php \
-                           --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base \
-                           --builder paketobuildpacks/builder:tiny
+                           --builder paketobuildpacks/builder:full
