--- a/.github/workflows/test-pull-request-procfile.yml
+++ b/.github/workflows/test-pull-request-procfile.yml
@@ -24,5 +24,4 @@ jobs:
       run: |
         ./scripts/smoke.sh --suite procfile \
                            --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base \
-                           --builder paketobuildpacks/builder:tiny
+                           --builder paketobuildpacks/builder:base
