fix paths parameter in java test workflow

--- a/.github/workflows/test-pull-request-java.yml
+++ b/.github/workflows/test-pull-request-java.yml
@@ -6,8 +6,7 @@ on:
     - main
     paths:
     - 'java/**'
-    paths-ignore:
-    - 'java/native-image/**'
+    - '!java/native-image/**'
 
 jobs:
   smoke:
