Force using the version of Java set by the matrix argument

--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -27,5 +27,5 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('java/maven/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - run: ./mvnw -B package
+      - run: ./mvnw -B package -Djava.version=${{ matrix.java }}
         working-directory: java/maven
