--- a/.github/workflows/test-pull-request-java-native-image.yml
+++ b/.github/workflows/test-pull-request-java-native-image.yml
@@ -40,6 +40,18 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
+    - name: Setup Directories
+      run: |
+        #!/usr/bin/env bash
+        set -euo pipefail
+
+        mkdir -p ~/.m2/repository
+        mkdir -p ~/.m2/repository/wrapper/dists
+        mkdir -p ~/.gradle/caches
+        mkdir -p ~/.gradle/wrapper/dists
+        chmod -R 775 ~/.m2
+        chmod -R 775 ~/.gradle
+
     - name: Test Java Native Image Samples
       run: |
         ./scripts/smoke.sh --suite java/native-image \
