Disable building non-executable JAR
This is required for the momement because Gradle will build and include two JAR files in the `build/libs` directory by default. The default pattern for the Gradle buildpack will pick up both, which in turn breaks executable JAR because it doesn't yet support running with multiple JAR files.

Signed-off-by: Daniel Mikusa <dmikusa@vmware.com>

--- a/java/gradle/build.gradle
+++ b/java/gradle/build.gradle
@@ -8,6 +8,10 @@ group = 'io.paketo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+jar {
+    enabled = false
+}
+
 repositories {
 	mavenCentral()
 }
