--- a/.github/workflows/test-pull-request-go.yml
+++ b/.github/workflows/test-pull-request-go.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Setup Go
       uses: actions/setup-go@v2.2.0
+      with:
+        go-version: 1.16
 
     - name: Checkout
       uses: actions/checkout@v2.4.0
