--- a/scripts/.util/test-workflow-template.yml
+++ b/scripts/.util/test-workflow-template.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Setup Go
       uses: actions/setup-go@v1
+      with:
+        go-version: 1.14
 
     - name: Checkout
       uses: actions/checkout@v2
