--- a/.github/workflows/test-pull-request-java.yml
+++ b/.github/workflows/test-pull-request-java.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v2.2.0
       with:
-        go-version: 1.17
+        go-version: 1.17.x
 
     - name: Checkout
       uses: actions/checkout@v2.4.0
