Update nodejs app

--- a/nodejs/npm/package.json
+++ b/nodejs/npm/package.json
@@ -10,5 +10,8 @@
     "type": "git",
     "url": "https://github.com/paketo-buildpacks/samples"
   },
+  "scripts": {
+    "start": "echo \"start\" && node server.js"
+  },
   "version": "0.0.0"
 }
