--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,10 +3,11 @@ ca-certificates/ @paketo-buildpacks/utilities-maintainers
 dotnet-core/     @paketo-buildpacks/dotnet-core-maintainers
 git/             @paketo-buildpacks/utilities-maintainers
 go/              @paketo-buildpacks/go-maintainers
-httpd/           @paketo-buildpacks/php-maintainers
+httpd/           @paketo-buildpacks/web-servers-maintainers
 java/            @paketo-buildpacks/java-buildpacks
-nginx/           @paketo-buildpacks/php-maintainers
+nginx/           @paketo-buildpacks/web-servers-maintainers
 nodejs/          @paketo-buildpacks/nodejs-maintainers
 php/             @paketo-buildpacks/php-maintainers
-procfile/        @paketo-buildpacks/java-buildpacks
+procfile/        @paketo-buildpacks/utilities-maintainers
+python/          @paketo-buildpacks/python-maintainers
 ruby/            @paketo-buildpacks/ruby-maintainers
