--- a/java/aspectj/pom.xml
+++ b/java/aspectj/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.9</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.5.10</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.paketo</groupId>
 	<artifactId>demo</artifactId>
@@ -29,7 +28,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
-  		<artifactId>aspectjweaver</artifactId>
+			<artifactId>aspectjweaver</artifactId>
 		</dependency>
 
 		<dependency>
