--- a/nginx/nginx-sample/nginx.conf
+++ b/nginx/nginx-sample/nginx.conf
@@ -6,8 +6,8 @@ events { worker_connections 1024; }
 
 http {
   charset utf-8;
-  log_format cloudfoundry 'NginxLog "$request" $status $body_bytes_sent';
-  access_log /dev/stdout cloudfoundry;
+  log_format cnb 'NginxLog "$request" $status $body_bytes_sent';
+  access_log /dev/stdout cnb;
   default_type application/octet-stream;
   include mime.types;
   sendfile on;
