--- a/python/poetry-run/pyproject.toml
+++ b/python/poetry-run/pyproject.toml
@@ -5,12 +5,9 @@ description = ""
 authors = []
 
 [tool.poetry.dependencies]
-python = "^3.6"
-Flask = "0.12.3"
-Jinja2 = "2.7.2"
-MarkupSafe = "0.21"
-Werkzeug = "0.10.4"
-gunicorn = "19.5.0"
+python = "^3.10"
+Flask = "2.0.3"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
