--- a/nodejs/yarn/package.json
+++ b/nodejs/yarn/package.json
@@ -10,5 +10,8 @@
     "type": "git",
     "url": "https://github.com/paketo-buildpacks/samples"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "version": "0.0.0"
 }
