update test workflows; add cron to test all samples

--- a/go/dep/project.toml
+++ b/go/dep/project.toml
@@ -1,3 +1,5 @@
-[[build.env]]
-name='BP_GO_IMPORT_PATH'
-value='github.com/paketo-buildpacks/samples/go/dep'
+# project.toml
+[ build ]
+  [[ build.env ]]
+    name="BP_GO_BUILD_IMPORT_PATH"
+    value="github.com/paketo-buildpacks/samples/go/dep"
