--- a/.github/workflows/test-all-samples.yml
+++ b/.github/workflows/test-all-samples.yml
@@ -14,6 +14,22 @@ jobs:
   smoke:
     name: Smoke Tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        suite:
+        - 'ca-certificates'
+        - 'dotnet-core'
+        - 'git'
+        - 'go'
+        - 'httpd'
+        - 'java'
+        - 'nginx'
+        - 'nodejs'
+        - 'php'
+        - 'procfile'
+        - 'python'
+        - 'ruby'
+
     steps:
     - name: Setup Go
       uses: actions/setup-go@v3
@@ -23,20 +39,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Test All Samples
+    - name: Test ${{ matrix.suite }}
       run: |
-        ./scripts/smoke.sh --builder paketobuildpacks/builder:full
+        ./scripts/smoke.sh --builder paketobuildpacks/builder:full --suite ${{ matrix.suite }}
 
     - name: File Issue
       if: ${{ failure() && github.event_name != 'pull_request' }}
       run: |
         echo "${{ secrets.PAKETO_BOT_GITHUB_TOKEN }}" | gh auth login --with-token
-        failure_issue=$(gh issue list --json number --label test-failure --jq .[0].number)
+        failure_issue=$(gh issue list --json number --label "${{ matrix.suite }}-test-failure" --jq .[0].number)
         if [ -z $failure_issue ]; \
         then gh issue create \
-        --title "Failure: 'Test All Samples' workflow" \
-        --label "test-failure" \
-        --body "[Test All Samples workflow](https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}) failed. Please take a look to ensure samples are working. (cc @paketo-buildpacks/content-maintainers)" \
+        --title "Failure: 'Test ${{ matrix.suite }}' workflow" \
+        --label "${{ matrix.suite }}-test-failure,test-failure" \
+        --body "[Test ${{ matrix.suite }} workflow](https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}) failed. Please take a look to ensure samples are working. (cc @paketo-buildpacks/content-maintainers)" \
         -R ${{github.repository}}; \
         else gh issue comment $failure_issue --body "Another failure occurred: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"; \
         fi
