--- a/.github/workflows/test-all-samples.yml
+++ b/.github/workflows/test-all-samples.yml
@@ -15,6 +15,8 @@ jobs:
     name: Smoke Tests
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
+      max-parallel: 3
       matrix:
         suite:
         - 'ca-certificates'
