--- a/.github/workflows/test-all-samples.yml
+++ b/.github/workflows/test-all-samples.yml
@@ -49,11 +49,11 @@ jobs:
       if: ${{ failure() && github.event_name != 'pull_request' }}
       run: |
         echo "${{ secrets.PAKETO_BOT_GITHUB_TOKEN }}" | gh auth login --with-token
-        failure_issue=$(gh issue list --json number --label "${{ matrix.suite }}-test-failure" --jq .[0].number)
+        failure_issue=$(gh issue list --json number --label "test-failure" --jq .[0].number)
         if [ -z $failure_issue ]; \
         then gh issue create \
-        --title "Failure: 'Test ${{ matrix.suite }}' workflow" \
-        --label "${{ matrix.suite }}-test-failure,test-failure" \
+        --title "Failure: 'Test All Samples (${{ matrix.suite }})' workflow" \
+        --label "test-failure" \
         --body "[Test ${{ matrix.suite }} workflow](https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}) failed. Please take a look to ensure samples are working. (cc @paketo-buildpacks/content-maintainers)" \
         -R ${{github.repository}}; \
         else gh issue comment $failure_issue --body "Another failure occurred: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"; \
