--- a/php/composer/composer.json
+++ b/php/composer/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "paketo/composer_app",
     "require": {
-        "vlucas/phpdotenv": "5.3.0"
+        "vlucas/phpdotenv": "5.3.0",
+        "php": "8.*"
     }
 }
