--- a/java/native-image/java-native-image-sample/pom.xml
+++ b/java/native-image/java-native-image-sample/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.7</version>
+		<version>2.7.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.paketo</groupId>
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<repackage.classifier />
-		<spring-native.version>0.11.4</spring-native.version>
+		<spring-native.version>0.12.0-SNAPSHOT</spring-native.version>
 	</properties>
 
 	<dependencies>
@@ -86,22 +86,19 @@
 
 	<repositories>
 		<repository>
-			<id>spring-releases</id>
-			<name>Spring Releases</name>
-			<url>https://repo.spring.io/release</url>
-			<snapshots>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/snapshot</url>
+			<releases>
 				<enabled>false</enabled>
-			</snapshots>
+			</releases>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
-			<id>spring-releases</id>
-			<name>Spring Releases</name>
-			<url>https://repo.spring.io/release</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/snapshot</url>
 		</pluginRepository>
 	</pluginRepositories>
 
@@ -110,13 +107,12 @@
 			<id>native</id>
 			<properties>
 				<repackage.classifier>exec</repackage.classifier>
-				<native-buildtools.version>0.9.0</native-buildtools.version>
+				<native-buildtools.version>0.9.11</native-buildtools.version>
 			</properties>
 			<dependencies>
 				<dependency>
-					<groupId>org.graalvm.buildtools</groupId>
-					<artifactId>junit-platform-native</artifactId>
-					<version>${native-buildtools.version}</version>
+					<groupId>org.junit.platform</groupId>
+					<artifactId>junit-platform-launcher</artifactId>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
@@ -126,6 +122,7 @@
 						<groupId>org.graalvm.buildtools</groupId>
 						<artifactId>native-maven-plugin</artifactId>
 						<version>${native-buildtools.version}</version>
+						<extensions>true</extensions>
 						<executions>
 							<execution>
 								<id>test-native</id>
