test .NET Core samples w/ bionic & jammy
Now that .NET Core buildpack supports both

--- a/.github/workflows/test-pull-request-dotnet-core.yml
+++ b/.github/workflows/test-pull-request-dotnet-core.yml
@@ -11,6 +11,15 @@ jobs:
   smoke:
     name: Smoke Tests
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      max-parallel: 3
+      matrix:
+        builder:
+        -  'paketobuildpacks/builder:full'
+        -  'paketobuildpacks/builder:base'
+        -  'paketobuildpacks/builder-jammy-base:latest'
+        -  'paketobuildpacks/builder-jammy-full:latest'
     steps:
     - name: Setup Go
       uses: actions/setup-go@v3
@@ -23,5 +32,4 @@ jobs:
     - name: Test .NET Samples
       run: |
         ./scripts/smoke.sh --suite dotnet-core \
-                           --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base
+                           --builder ${{ matrix.builder }} 
