use matrix strategy for builders in template
and add jammy builders to default set of builders to test against

--- a/scripts/.util/test-workflow-template.yml
+++ b/scripts/.util/test-workflow-template.yml
@@ -6,11 +6,23 @@ on:
     - main
     paths:
     - '${language}/**'
+    - '.github/workflows/test-pull-request-${language}.yml'
 
 jobs:
   smoke:
     name: Smoke Tests
     runs-on: ubuntu-latest
+    strategy:
+    fail-fast: false
+    max-parallel: 3
+    matrix:
+      builder:
+      -  'paketobuildpacks/builder:full'
+      -  'paketobuildpacks/builder:base'
+      -  'paketobuildpacks/builder:tiny'
+      -  'paketobuildpacks/builder-jammy-full:latest'
+      -  'paketobuildpacks/builder-jammy-base:latest'
+      -  'paketobuildpacks/builder-jammy-tiny:latest'
     steps:
     - name: Setup Go
       uses: actions/setup-go@v3
@@ -23,6 +35,4 @@ jobs:
     - name: Test ${language} Samples
       run: |
         ./scripts/smoke.sh --suite ${language} \
-                           --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base \
-                           --builder paketobuildpacks/builder:tiny
+                           --builder {{ matrix.builder }}
