--- a/.github/workflows/test-pull-request-dotnet-core.yml
+++ b/.github/workflows/test-pull-request-dotnet-core.yml
@@ -8,6 +8,11 @@ on:
     - 'dotnet-core/**'
     - '.github/workflows/test-pull-request-dotnet-core.yml'
 
+concurrency:
+  # only one instance of test suite per PR at one time
+  group: pr-${{ github.event.number }}
+  cancel-in-progress: true
+
 jobs:
   smoke:
     name: Smoke Tests
@@ -17,10 +22,10 @@ jobs:
       max-parallel: 3
       matrix:
         builder:
-        -  'paketobuildpacks/builder:full'
-        -  'paketobuildpacks/builder:base'
-        -  'paketobuildpacks/builder-jammy-base:latest'
-        -  'paketobuildpacks/builder-jammy-full:latest'
+        - 'paketobuildpacks/builder:full'
+        - 'paketobuildpacks/builder:base'
+        - 'paketobuildpacks/builder-jammy-base:latest'
+        - 'paketobuildpacks/builder-jammy-full:latest'
     steps:
     - name: Setup Go
       uses: actions/setup-go@v3
@@ -33,4 +38,4 @@ jobs:
     - name: Test .NET Samples
       run: |
         ./scripts/smoke.sh --suite dotnet-core \
-                           --builder ${{ matrix.builder }} 
+                           --builder ${{ matrix.builder }}
