--- a/.github/workflows/test-pull-request-nodejs.yml
+++ b/.github/workflows/test-pull-request-nodejs.yml
@@ -8,6 +8,11 @@ on:
     - 'nodejs/**'
     - '.github/workflows/test-pull-request-nodejs.yml'
 
+concurrency:
+  # only one instance of test suite per PR at one time
+  group: pr-${{ github.event.number }}
+  cancel-in-progress: true
+
 jobs:
   smoke:
     name: Smoke Tests
