--- a/nodejs/angular-npm/angular.json
+++ b/nodejs/angular-npm/angular.json
@@ -2,6 +2,11 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "cli":{
+    "cache": {
+      "path": "/tmp/.angular/cache"
+    }
+  },
   "projects": {
     "my-project-name": {
       "projectType": "application",
