--- a/ruby/rails_assets/package.json
+++ b/ruby/rails_assets/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "myapp",
+  "name": "app",
   "private": true,
   "dependencies": {
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "~5"
+    "@rails/ujs": "^7.0.4",
+    "@rails/webpacker": "^6.0.0-rc.6",
+    "babel-plugin-macros": "^3.1.0",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   },
   "version": "0.1.0",
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
+    "@webpack-cli/serve": "^1.7.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
