--- a/.github/workflows/java-dist-zip.yml
+++ b/.github/workflows/java-dist-zip.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [8, 11]
+        java: [17]
 
     steps:
       - uses: actions/checkout@v3
