--- a/java/dist-zip/build.gradle
+++ b/java/dist-zip/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.1'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'application'
 }
 
 group = 'io.paketo'
