Fix missing actuator deps and update name of buildpacks in test assertions
Signed-off-by: Daniel Mikusa <dan@mikusa.com>

--- a/java/dist-zip/build.gradle
+++ b/java/dist-zip/build.gradle
@@ -15,7 +15,9 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation 'io.projectreactor:reactor-test'
 }
 
 test {
