--- a/java/gradle/build.gradle
+++ b/java/gradle/build.gradle
@@ -18,7 +18,9 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation 'io.projectreactor:reactor-test'
 }
 
 test {
