Test Fix-273 impact

--- a/.github/workflows/test-pull-request-java-native-image.yml
+++ b/.github/workflows/test-pull-request-java-native-image.yml
@@ -56,6 +56,4 @@ jobs:
     - name: Test Java Native Image Samples
       run: |
         ./scripts/smoke.sh --suite java/native-image \
-                           --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base \
-                           --builder paketobuildpacks/builder:tiny
+                           --builder anthonydahanne/tiny-builder:fix-273
