Add default properties to management endpoint * so that GraalVM native build notices them and don't discard the code parsing those properties

--- a/java/native-image/java-native-image-sample/src/main/resources/application.properties
+++ b/java/native-image/java-native-image-sample/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+management.endpoint.health.probes.add-additional-paths=true
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/actuator
+management.endpoints.web.exposure.include=*
+management.health.probes.enabled=true
+management.server.port=8080
