Update builders from bionic -> jammy
Remove all bionic builder uses.
Replace with jammy builder wherever jammy builders weren't used.

Fixes github.com/paketo-buildpacks/samples/issues/624

--- a/.github/workflows/test-all-samples.yml
+++ b/.github/workflows/test-all-samples.yml
@@ -78,7 +78,7 @@ jobs:
 
     - name: Test ${{ matrix.suite }}
       run: |
-        ./scripts/smoke.sh --builder paketobuildpacks/builder:full --suite ${{ matrix.suite }}
+        ./scripts/smoke.sh --builder paketobuildpacks/builder-jammy-full:latest --suite ${{ matrix.suite }}
 
     - name: File Issue
       if: ${{ failure() && github.event_name != 'pull_request' }}
