--- a/.github/workflows/test-pull-request-java-native-image.yml
+++ b/.github/workflows/test-pull-request-java-native-image.yml
@@ -56,6 +56,6 @@ jobs:
     - name: Test Java Native Image Samples
       run: |
         ./scripts/smoke.sh --suite java/native-image \
-                           --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base \
-                           --builder paketobuildpacks/builder:tiny
+                           --builder paketobuildpacks/builder-jammy-full:latest \
+                           --builder paketobuildpacks/builder-jammy-base:latest \
+                           --builder paketobuildpacks/builder-jammy-tiny:latest
