--- a/.github/workflows/test-pull-request-java-node.yml
+++ b/.github/workflows/test-pull-request-java-node.yml
@@ -56,5 +56,5 @@ jobs:
       - name: Test Java-Node Samples
         run: |
           ./scripts/smoke.sh --suite java/java-node \
-                             --builder paketobuildpacks/builder:full \
-                             --builder paketobuildpacks/builder:base \
+                             --builder paketobuildpacks/builder-jammy-full:latest \
+                             --builder paketobuildpacks/builder-jammy-base:latest \
