--- a/.github/workflows/test-pull-request-ruby.yml
+++ b/.github/workflows/test-pull-request-ruby.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Test Ruby Samples
       run: |
         ./scripts/smoke.sh --suite ruby \
-                           --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base
+                           --builder paketobuildpacks/builder-jammy-full:latest \
+                           --builder paketobuildpacks/builder-jammy-base:latest
