--- a/.github/workflows/test-pull-request-web-servers.yml
+++ b/.github/workflows/test-pull-request-web-servers.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Test Web Servers Samples
       run: |
         ./scripts/smoke.sh --suite web-servers \
-                           --builder paketobuildpacks/builder:full \
-                           --builder paketobuildpacks/builder:base
+                           --builder paketobuildpacks/builder-jammy-full:latest \
+                           --builder paketobuildpacks/builder-jammy-base:latest
